--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.8.3",
     "express": "^4.9.4",
     "ejs": "^1.0.0",
-    "node-forge": "^0.6.12"
+    "node-forge": "^0.6.12",
+    "mongoose": "^3.8.16"
   }
 }
